--- a/index.html
+++ b/index.html
@@ -4,32 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700" rel="stylesheet">
     <title>Odtwarzacz</title>
 </head>
 <body>
 <input class="description" placeholder="enter a title or description">
 <button class="find">Szukaj</button>
 
+<div class="container"></div>
 
 
-<ul class="movie_list">
-
-</ul>
-
-
-    <video width="480" height="270" class="video">
-        <!--<source src="lesson1.mp4" type="video/mp4">-->
-        <!--<source src="lesson.ogg" type="video/ogg">-->
-        Your browser does not support HTML5 video.
-    </video>
-
-<!--<noembed>-->
-    <!--Niestety Twoja przeglądarka nie odtwarza plików multimedialnych,-->
-    <!--ale-->
-    <!--<a href="http://techslides.com/demos/sample-videos/small.mp4">tutaj</a>-->
-    <!--<a href="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">tutaj</a>-->
-    <!--możesz zobaczyć ten plik!-->
-<!--</noembed>-->
 
 </body>
 <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
