--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 
 </body>
-<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <script src=script.js></script>
 </html>
