--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Odtwarzacz</title>
 </head>
 <body>
+<div class="main">
 <input class="description" placeholder="enter a title or description">
-<button class="find">Szukaj</button>
+<button class="find">Search</button>
+</div>
 
 <div class="container"></div>
 
